refactor: clean up group resources code
* refactor: clean group resources code

* test: student switch and enter group